# watermelon-be

./: README.md  docker-compose.yml  pyproject.toml  setup.py
docs/: api_reference.md
src/app/: __init__.py  main.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: database.py  health.py  prices.py
src/app/core/: audit.py  config.py
src/app/db/: init_db.py  models.py  session.py
src/app/model/: predict_next7.py  train_production_ridge.py
src/app/pipeline/: merge_all_features.py  run_pipeline.py  update_cpi.py  upload_to_blob.py
src/app/schema/: price.py
src/app/service/: kamis_price_to_csv.py  weather_api_to_csv.py
tests/: test_forecast_api.py  test_health.py  test_kamis_price_to_csv.py  test_pipeline.py  test_prices.py  test_weather_api_to_csv.py
